--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "staticWebApps.appSubpath": "/",
+  "staticWebApps.appSubpath": "/src",
   "staticWebApps.apiSubpath": "api",
   "staticWebApps.outputSubpath": "build"
 }
